src/test/resources/scripts/language/parser/valid/function/std/math.sbsc
assert(pow(2.0, 2.0) == 4.0);
assert(sqrt(4.0) == 2.0);


return true;