src/test/resources/scripts/language/parser/invalid/coercion/arithmetic/addFunction.sbsc
3 + (): int -> 4;

return true;